added dialog to show write_external_storage permission explanation when required

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,38 @@ android {
     compileSdkVersion versions.compileSdk
     buildToolsVersion versions.buildTools
     defaultConfig {
-        applicationId "com.sonu.app.splash"
+
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
         versionCode 2
-        versionName "0.0.1"
+        versionName "0.0.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    
+    ext{
+        APP_NAME_DEBUG = "@string/app_name_debug"
+        APP_NAME_RELEASE = "@string/app_name_release"
+    }
+
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
+
+            // replace applicationLabel in manifest with appropriate app_name
+            manifestPlaceholders = [ applicationLabel: APP_NAME_RELEASE]
+        }
+
+        debug {
+            // for giving a different application id to debug apk
+            // to keep debug and release apk at the same time in test device
+            applicationIdSuffix ".debug"
+            versionNameSuffix '-DEBUG'
+
+            // replace applicationLabel in manifest with appropriate app_name
+            manifestPlaceholders = [ applicationLabel: APP_NAME_DEBUG]
         }
     }
 }
