--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name="com.sonu.app.splash.ui.about.AboutActivity"
             android:theme="@style/Splash.Translucent.About" />
 
+        <activity
+            android:name="com.sonu.app.splash.ui.photodescription.PhotoDescriptionActivity"
+            android:theme="@style/Splash.Translucent.PhotoDescription" />
+
         <!-- exported=false for restricting the usage of service by this app only-->
         <service
             android:name="com.sonu.app.splash.data.download.PhotoDownloadService"
