--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,8 @@ dependencies {
     // for drag dismiss
     compile 'com.github.Commit451:ElasticDragDismissLayout:1.0.4'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
     // testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
