download button in photo description screen, number formatting for K, M etc, transition animation in colelction screen and list item, search by clicking in tags in user description screen and collection description screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
             android:name=".ui.collectiondecription.CollectionDescriptionActivity"
             android:theme="@style/Splash.Translucent.CollectionDescription" />
 
+        <activity
+            android:name=".ui.search.allsearch.AllSearchActivity"
+            android:theme="@style/Splash.Translucent.AllSearch" />
+
         <!-- exported=false for restricting the usage of service by this app only-->
         <service
             android:name="com.sonu.app.splash.data.download.PhotoDownloadService"
