--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,25 @@
 apply plugin: 'com.android.application'
 
-def gitTag = 'git describe --tags'.execute([], project.rootDir).text.trim()
-def gitCommitCount = 13
-//        Integer.parseInt('git rev-list --count HEAD'.execute([], project.rootDir).text.trim())
-logger.debug("gitTag="+gitTag)
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-kapt'
+
+def versionMajor = 0
+def versionMinor = 0
+def versionPatch = 0
+def versionBuild = 1 // bump for dogfood builds, public betas, etc.
 
 android {
-    compileSdkVersion versions.compileSdk
-    buildToolsVersion versions.buildTools
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
 
-        minSdkVersion versions.minSdk
-        targetSdkVersion versions.targetSdk
-        versionCode gitCommitCount
-        versionName gitTag
+        minSdkVersion 23
+        targetSdkVersion 27
+        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
@@ -31,7 +37,7 @@ android {
     buildTypes {
 
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
 
@@ -40,6 +46,7 @@ android {
         }
 
         debug {
+            minifyEnabled false
             // for giving a different application id to debug apk
             // to keep debug and release apk at the same time in test device
             applicationIdSuffix ".debug"
@@ -49,6 +56,7 @@ android {
             manifestPlaceholders = [ applicationLabel_1: APP_NAME_DEBUG]
         }
     }
+
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
@@ -58,58 +66,61 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     // android support libraries
-    implementation "com.android.support:appcompat-v7:${versions.supportLibrary}"
-    implementation "com.android.support:design:${versions.supportLibrary}"
-    implementation "com.android.support:palette-v7:${versions.supportLibrary}"
-    implementation "com.android.support:recyclerview-v7:${versions.supportLibrary}"
-    compile "com.android.support:cardview-v7:${versions.supportLibrary}"
+    implementation "com.android.support:appcompat-v7:$supportLibraryVer"
+    implementation "com.android.support:design:$supportLibraryVer"
+    implementation "com.android.support:palette-v7:$supportLibraryVer"
+    implementation "com.android.support:recyclerview-v7:$supportLibraryVer"
+    implementation "com.android.support:cardview-v7:$supportLibraryVer"
 
     // constraint layout
-    implementation "com.android.support.constraint:constraint-layout:${versions.constraintLayout}"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVer"
 
     // glide - images
-    implementation "com.github.bumptech.glide:glide:${versions.glide}"
-    annotationProcessor "com.github.bumptech.glide:compiler:${versions.glide}"
-    implementation "com.github.bumptech.glide:okhttp3-integration:${versions.glide}"
-    implementation "com.github.bumptech.glide:recyclerview-integration:${versions.glide}"
+    implementation "com.github.bumptech.glide:glide:$glideVer"
+    kapt "com.github.bumptech.glide:compiler:$glideVer"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$glideVer"
+    implementation "com.github.bumptech.glide:recyclerview-integration:$glideVer"
 
     // gson - json helper
-    implementation "com.google.code.gson:gson:${versions.gson}"
+    implementation "com.google.code.gson:gson:$gsonVer"
 
     // butterknife - view injection
-    implementation "com.jakewharton:butterknife:${versions.butterknife}"
-    annotationProcessor "com.jakewharton:butterknife-compiler:${versions.butterknife}"
+    implementation "com.jakewharton:butterknife:$butterknifeVer"
+    kapt "com.jakewharton:butterknife-compiler:$butterknifeVer"
 
     // retrofit - api calls
-    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
-    implementation "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVer"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVer"
 
     // okhttp - api calls
-    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+    implementation "com.squareup.okhttp3:okhttp:$okhttpVer"
 
     // dagger - dependency injection
-    annotationProcessor "com.google.dagger:dagger-compiler:${versions.dagger}"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile "com.google.dagger:dagger:${versions.dagger}"
-    compile "com.google.dagger:dagger-android:${versions.dagger}"
-    compile "com.google.dagger:dagger-android-support:${versions.dagger}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:${versions.dagger}"
+    implementation "com.google.dagger:dagger:$daggerVer"
+    kapt  "com.google.dagger:dagger-compiler:$daggerVer"
+    implementation "com.google.dagger:dagger-android:$daggerVer"
+    kapt  "com.google.dagger:dagger-android-processor:$daggerVer"
+    implementation "com.google.dagger:dagger-android-support:$daggerVer"
+    // if you upgrade this to latest version -> DaggerAppComponent is not generated
+    kapt  "com.google.dagger:dagger-android-support:2.12"
 
     // rx-java and rx-android - reactive programming
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVer"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjavaVer"
 
     // material progress bar with not min height
-    compile "me.zhanghai.android.materialprogressbar:library:1.4.1"
+    implementation "me.zhanghai.android.materialprogressbar:library:1.4.1"
 
     // for drag dismiss
-    compile 'com.github.Commit451:ElasticDragDismissLayout:1.0.4'
+    implementation 'com.github.Commit451:ElasticDragDismissLayout:1.0.4'
 
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
 
     implementation 'com.robinhood.spark:spark:1.2.0'
 
