--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.kotlin_version = '1.2.30'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        
+        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-
-    ext.versions = [
-            'compileSdk'       : 27,
-            'targetSdk'        : 27,
-            'minSdk'           : 23,
-            'buildTools'       : '27.0.1',
-            'constraintLayout' : '1.0.2',
-            'butterknife'      : '8.8.1',
-            'glide'            : '4.3.0',
-            'retrofit'         : '2.3.0',
-            'supportLibrary'   : '27.0.2',
-            'gson'             : '2.8.1',
-            'okhttp'           : '3.9.0',
-            'dagger'           : '2.11'
-    ]
 }
 
 allprojects {
@@ -42,4 +27,17 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    constraintLayoutVer = '1.0.2'
+    butterknifeVer = '8.8.1'
+    glideVer = '4.3.0'
+    retrofitVer = '2.3.0'
+    supportLibraryVer = '27.1.1'
+    gsonVer = '2.8.1'
+    okhttpVer = '3.9.0'
+    daggerVer = '2.15'
+    rxandroidVer = '2.0.2'
+    rxjavaVer = '2.1.10'
 }
